--- a/L01/index.html
+++ b/L01/index.html
@@ -8,6 +8,7 @@
 <body>
 	<div id="container"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
+<script src="tween.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
